--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "slpt": "dead-server --host=localhost --port5580",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ZMaknickas/55-generuoti-sl.git"
+  },
   "keywords": [],
-  "author": "webz (https://github.com/ZMaknickas)",
+  "author": "",
   "license": "ISC",
-  "description": "",
-  "devDependencies": {
-    "dead-server": "^1.0.9"
-  }
+  "bugs": {
+    "url": "https://github.com/ZMaknickas/55-generuoti-sl/issues"
+  },
+  "homepage": "https://github.com/ZMaknickas/55-generuoti-sl#readme",
+  "description": ""
 }
